--- a/assets/css/zapisnik.css
+++ b/assets/css/zapisnik.css
@@ -1,3 +1,4 @@
+/*POTAVLJA POZADINU DA PREKRIVA ZASLON I NE PONAVLJA SE */
 body{
     background-image: url('../img/loginBackround.jpg');
     background-size: cover;
@@ -5,51 +6,84 @@ body{
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 h1{
     margin-bottom: 10px;
 }
 
-.log-in-box{
-    width: 320px;
-    height: 420px;
+
+.acc-box{
+    width: 420px;
+    margin: auto;
+}
+
+
+
+.header{
     color: #fff;
-    top: 60%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    box-sizing: border-box;
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
+    margin: auto;
+    margin-top: 10%;
+    width: 420px;
 }
 
 .avatar{
     width: 100px;
     height: 100px;
-    position: absolute;
-    top: -25%;
-    left: calc(50% - 50px);
+    margin: auto;
+    margin-bottom: 5px;
 
 }
 
-.notice{
-    width: 320px;
-    background-color: rgb(15, 134, 128);
+.topText{
+    padding: 5px;
+    background-color:  rgb(16, 167, 141);
+    font-family: monospace;
     border-radius: 50px;
     text-align: center;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
 }
 
 .zapisnik-card{
-    width: 15rem;
+    width: 18rem;
+    height: 15rem;
     margin: 1.5px;
+    overflow: auto;
     display: inline-block;
 }
 
+.card-remove{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
 
+.card-link{
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+}
+
+.create-acc-btn{
+    margin: 5px;
+    color: white;
+    transition: 0.5s;
+}
+  
+.create-acc-btn:hover{
+    color: rgb(199, 199, 199);
+}
+
+.filler-text{
+    margin: auto;
+    margin-right: 10%;
+    text-align: center;
+    border: 5px solid gray;
+    border-radius: 10px;
+}
+
+.uredite-akcije-btn{
+    display: inline-block;
+    
+}
