--- a/assets/css/zapisnik.css
+++ b/assets/css/zapisnik.css
@@ -1,35 +1,28 @@
 /*POTAVLJA POZADINU DA PREKRIVA ZASLON I NE PONAVLJA SE */
-body{
+body {
     background-image: url('../img/loginBackround.jpg');
     background-size: cover;
     background-blend-mode: overlay;
     background-repeat: no-repeat;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
 }
 
-h1{
+h1 {
     margin-bottom: 10px;
 }
 
-
-.acc-box{
+.acc-box {
     width: 420px;
     margin: auto;
 }
 
-
-
-.header{
+.header {
     color: #fff;
     margin: auto;
     margin-top: 10%;
     width: 420px;
 }
 
-.avatar{
+.avatar {
     width: 100px;
     height: 100px;
     margin: auto;
@@ -37,7 +30,7 @@ h1{
 
 }
 
-.topText{
+.topText {
     padding: 5px;
     background-color:  rgb(16, 167, 141);
     font-family: monospace;
@@ -45,7 +38,7 @@ h1{
     text-align: center;
 }
 
-.zapisnik-card{
+.zapisnik-card {
     width: 18rem;
     height: 15rem;
     margin: 1.5px;
@@ -53,29 +46,29 @@ h1{
     display: inline-block;
 }
 
-.card-remove{
+.card-remove {
     position: absolute;
     right: 10px;
     top: 10px;
 }
 
-.card-link{
+.card-link {
     position: absolute;
     bottom: 10px;
     left: 10px;
 }
 
-.create-acc-btn{
+.create-acc-btn {
     margin: 5px;
     color: white;
     transition: 0.5s;
 }
   
-.create-acc-btn:hover{
+.create-acc-btn:hover {
     color: rgb(199, 199, 199);
 }
 
-.filler-text{
+.filler-text {
     margin: auto;
     margin-right: 10%;
     text-align: center;
@@ -83,7 +76,6 @@ h1{
     border-radius: 10px;
 }
 
-.uredite-akcije-btn{
+.edit-activities-btn {
     display: inline-block;
-    
 }
