--- a/assets/css/adminPanel.css
+++ b/assets/css/adminPanel.css
@@ -3,7 +3,6 @@
 }
 
 .activity-container {
-    position: relative;
     height: 50em;
     border: 2px solid #808080;
     border-radius: 10px;
@@ -11,7 +10,7 @@
 }
 
 .users-container {
-    color: whitesmoke;
+    color: #f5f5f5;
     height: 30%;
     border: 2px solid #808080;
     border-radius: 10px;
@@ -22,6 +21,7 @@
     background-color: #f5f5f5;
     margin-block: 5px;
     color: #000000;
+    border-radius: 5px;
 }
 
 .user-manager button {
@@ -33,15 +33,4 @@
 .user-manager h4 {
     display: inline;
     margin: 5px;
-}
-
-.bootstrap-select .bs-ok-default::after {
-    width: 0.3em;
-    height: 0.6em;
-    border-width: 0 0.1em 0.1em 0;
-    transform: rotate(45deg) translateY(0.5rem);
-}
-
-.btn.dropdown-toggle:focus {
-    outline: none !important;
 }
